force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Accommodations_Description__c.field-meta.xml
<CustomField>
    <fullName>Accommodations_Description__c</fullName>
    <label>Accommodations Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>