force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Age_Range_of_Youth_Served__c.field-meta.xml
<CustomField>
    <fullName>Age_Range_of_Youth_Served__c</fullName>
    <label>Age Range of Youth Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Care</fullName>
            </value>
            <value>
                <fullName>Preschool</fullName>
            </value>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>We do not serve youth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>