force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Attendee_No__c.field-meta.xml
<CustomField>
    <fullName>Attendee_No__c</fullName>
    <displayFormat>ATT-{0000000}</displayFormat>
    <label>Attendee Number</label>
    <type>AutoNumber</type>
</CustomField>