force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Attendee_Status__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Status__c</fullName>
    <label>Attendee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>