force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Community_Schools_101_Training_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Community_Schools_101_Training_Ticket__c</fullName>
    <label>Community Schools 101 Training Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>