force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Community_Schools_Conference_2024_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Community_Schools_Conference_2024_Ticket__c</fullName>
    <label>Community Schools Conference 2024 Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>