force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Dietary_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restriction__c</fullName>
    <label>Dietary Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>