force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Dietary_Restriction_Description__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restriction_Description__c</fullName>
    <label>Dietary Restriction Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>