force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Discount_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Promo_Code__c</fullName>
    <label>Discount/Promo Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>