force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/FirstLastEmail__c.field-meta.xml
<CustomField>
    <fullName>FirstLastEmail__c</fullName>
    <formula>BLANKVALUE(summit__Registrant_First_Name__c, &quot;&quot;) &amp; BLANKVALUE(summit__Registrant_Last_Name__c, &quot;&quot;) &amp; BLANKVALUE(summit__Registrant_Email__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstLastEmail</label>
    <type>Text</type>
</CustomField>