force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Form_Provider__c.field-meta.xml
<CustomField>
    <fullName>Form_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Provider</label>
    <type>Checkbox</type>
</CustomField>