force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Funding_Description__c.field-meta.xml
<CustomField>
    <fullName>Funding_Description__c</fullName>
    <label>Funding Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>