force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Main_Registration__c.field-meta.xml
<CustomField>
    <fullName>Main_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Registration</label>
    <type>Checkbox</type>
</CustomField>