force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Other_Pronoun_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Pronoun_Description__c</fullName>
    <label>Other Pronoun Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>