force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <label>Project ID #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>