force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Schools_Out_Fri_Sat_2024_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Schools_Out_Fri_Sat_2024_Ticket__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Schools Out Fri+Sat 2024 Ticket</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>