force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Selected_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Selected_Tickets__c</fullName>
    <label>Selected Tickets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community School&apos;s Conference</fullName>
            </value>
            <value>
                <fullName>Schools Out</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Community Schools 101 Training</fullName>
            </value>
            <value>
                <fullName>21st Century</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>