force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Site_Visit_Martin_Luther_2024__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Martin_Luther_2024__c</fullName>
    <label>Site Visit Martin Luther 2024</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>