force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Site_Visit_Paige_Elementary__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Paige_Elementary__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Site Visit Paige Elementary</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>