force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Site_Visit_William_C_Keane__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_William_C_Keane__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Site Visit William C Keane</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>