force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Sum_Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Sum_Total_Due__c</fullName>
    <label>Sum Total Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>