force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/summit__Registrant_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>summit__Registrant_Pronouns__c</fullName>
    <label>Registrant Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>They/Them</fullName>
            </value>
            <value>
                <fullName>She/Her</fullName>
            </value>
            <value>
                <fullName>He/Him</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>