force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21st Century - Friday Pass for CCLC Participants</fullName>
            </value>
            <value>
                <fullName>Member Rate - Friday Only (1 day)</fullName>
            </value>
            <value>
                <fullName>Member Rate - Saturday Only (1 day)</fullName>
            </value>
            <value>
                <fullName>Member Rate - Full Conference (2 days)</fullName>
            </value>
            <value>
                <fullName>Friday Only (1 day)</fullName>
            </value>
            <value>
                <fullName>Saturday Only (1 day)</fullName>
            </value>
            <value>
                <fullName>Full Conference (2 days)</fullName>
            </value>
            <value>
                <fullName>Site Visits (Wed)</fullName>
            </value>
            <value>
                <fullName>NYS Community Schools (Thursday)</fullName>
            </value>
            <value>
                <fullName>Presenter - Free Friday Ticket</fullName>
            </value>
            <value>
                <fullName>Presenter - Free Saturday Ticket</fullName>
            </value>
            <value>
                <fullName>VIP Dinner - Free (Wed)</fullName>
            </value>
            <value>
                <fullName>Vendor - Free</fullName>
            </value>
            <value>
                <fullName>Award Winner - Free</fullName>
            </value>
            <value>
                <fullName>Sponsor - Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>