force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/Type_of_funding_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Type_of_funding_if_applicable__c</fullName>
    <label>Type of funding (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Fees</fullName>
            </value>
            <value>
                <fullName>Grant Funding</fullName>
            </value>
            <value>
                <fullName>City or County Funding</fullName>
            </value>
            <value>
                <fullName>School District Funding</fullName>
            </value>
            <value>
                <fullName>Private Funding</fullName>
            </value>
            <value>
                <fullName>Corporate Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>