force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/VIP_Dinner_2024_Ticket__c.field-meta.xml
<CustomField>
    <fullName>VIP_Dinner_2024_Ticket__c</fullName>
    <label>VIP Dinner 2024 Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>