force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/X21_CCLC_Site_Location__c.field-meta.xml
<CustomField>
    <fullName>X21_CCLC_Site_Location__c</fullName>
    <label>21 CCLC Site Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>