force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/X21_CLCC_Program_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>X21_CLCC_Program_Physical_Address__c</fullName>
    <label>21 CLCC Program Physical Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>