force-app/main/default/objects/summit__Summit_Events_Registration__c/fields/X21st_Century_2024_Ticket__c.field-meta.xml
<CustomField>
    <fullName>X21st_Century_2024_Ticket__c</fullName>
    <defaultValue>0</defaultValue>
    <label>21st Century 2024 Ticket</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>